PHP Charset Detect Extension Changelog

$Id: Changelog,v 1.4 2009-02-18 16:06:55 oops Exp $

* 0.0.1
--------------------------------------------------------------------------------

Thu Feb 20 2009
by JoungKyun Kim <http://oops.org>
	- changed Py_Initialize to Py_InitializeEx
	- fix problem that confidencial set 0 if confidencial is int, on moz_chardet
	- changed efree to SAFE_EFREE macro
	- support Mozilla Univercial Chardet

Wed Feb 19 2009
by JoungKyun Kim <http://oops.org>
	- first build
