@@ -1,6 +1,6 @@
 PHP Charset Detect Extension Changelog
 
-$Id: Changelog,v 1.4 2009-02-18 16:06:55 oops Exp $
+$Id: Changelog,v 1.5 2009-02-18 17:03:03 oops Exp $
 
 * 0.0.1
 --------------------------------------------------------------------------------
@@ -11,6 +11,7 @@ by JoungKyun Kim <http://oops.org>
 	- fix problem that confidencial set 0 if confidencial is int, on moz_chardet
 	- changed efree to SAFE_EFREE macro
 	- support Mozilla Univercial Chardet
+	- replace python conflict charactor
 
 Wed Feb 19 2009
 by JoungKyun Kim <http://oops.org>
